Added winning and losing logic and major code refactor